--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -1,14 +1,14 @@
 ################################################################
 # WordPress stable nginx configuration
 #
-# http://local.wordpress.dev - this server configuration is
+# http://vvv.otestsite.dev - this server configuration is
 # setup to listen on port 80 for any requests coming in to
-# local.wordpress.dev and use the {vvv_path_to_site}/public_html directory
+# lvvv.otestsite.dev and use the {vvv_path_to_site}/public_html directory
 # to serve them.
 server {
     listen       80;
     listen       443 ssl;
-    server_name  local.wordpress.dev *.local.wordpress.dev ~^local\.wordpress\.\d+\.\d+\.\d+\.\d+\.xip\.io$;
+    server_name  vvv.otestsite.dev *.vvv.otestsite.dev ~^vvv\.otestsite\.\d+\.\d+\.\d+\.\d+\.xip\.io$;
     root         {vvv_path_to_site}/public_html;
 
     error_log    {vvv_path_to_site}/log/error.log;
