--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -3,7 +3,7 @@
 #
 # http://vvv.otestsite.dev - this server configuration is
 # setup to listen on port 80 for any requests coming in to
-# lvvv.otestsite.dev and use the {vvv_path_to_site}/public_html directory
+# vvv.otestsite.dev and use the {vvv_path_to_site}/public_html directory
 # to serve them.
 server {
     listen       80;
