--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -4,7 +4,7 @@
 # http://testsite.dev - this server configuration is
 # setup to listen on port 80 for any requests coming in to
 # testsite.dev and use the {vvv_path_to_site}/public_html directory
-# to serve them.
+# to serve them. $upstream {upstream};
 server {
     listen       80;
     listen       443 ssl;
@@ -14,7 +14,7 @@ server {
     error_log    {vvv_path_to_site}/log/error.log;
     access_log   {vvv_path_to_site}/log/access.log;
     
-    set          $upstream {upstream};
+    set          $upstream php56;
 
     include      /etc/nginx/nginx-wp-common.conf;
 }
