--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -1,20 +1,20 @@
 ################################################################
 # WordPress stable nginx configuration
 #
-# http://ooooo.dev - this server configuration is
+# http://testsite.dev - this server configuration is
 # setup to listen on port 80 for any requests coming in to
-# ooooo.dev and use the {vvv_path_to_site}/public_html directory
-# to serve them. $upstream {upstream};use : $upstream php56; to enforce php56
+# testsite.dev and use the {vvv_path_to_site}/public_html directory
+# to serve them. $upstream {upstream};
 server {
     listen       80;
     listen       443 ssl;
-    server_name  ooooo.dev *.ooooo.dev ~^\.ooooo\.\d+\.\d+\.\d+\.\d+\.xip\.io$;
+    server_name  testsite.dev *.testsite.dev ~^\.testsite\.\d+\.\d+\.\d+\.\d+\.xip\.io$;
     root         {vvv_path_to_site}/public_html;
 
     error_log    {vvv_path_to_site}/log/error.log;
     access_log   {vvv_path_to_site}/log/access.log;
     
-    set          $upstream {upstream};
+    set          $upstream php56;
 
     include      /etc/nginx/nginx-wp-common.conf;
 }
