--- a/provision/vvv-nginx.conf
+++ b/provision/vvv-nginx.conf
@@ -1,19 +1,19 @@
 ################################################################
 # WordPress stable nginx configuration
 #
-# http://testsite.dev - this server configuration is
+# http://testsite.local - this server configuration is
 # setup to listen on port 80 for any requests coming in to
-# testsite.dev and use the {vvv_path_to_site}/public_html directory
+# testsite.local and use the {vvv_path_to_site}/public_html directory
 # to serve them. $upstream {upstream};
 server {
     listen       80;
     listen       443 ssl;
-    server_name  testsite.dev *.testsite.dev ~^\.testsite\.\d+\.\d+\.\d+\.\d+\.xip\.io$;
+    server_name  testsite.local *.testsite.local ~^\.testsite\.\d+\.\d+\.\d+\.\d+\.xip\.io$;
     root         {vvv_path_to_site}/public_html;
 
     error_log    {vvv_path_to_site}/log/error.log;
     access_log   {vvv_path_to_site}/log/access.log;
-    
+
     set          $upstream php56;
 
     include      /etc/nginx/nginx-wp-common.conf;
